pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-230-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/230-block_quotes.md
---
    [1m[3m[34m┄[0m[1m[3m[34mFoo[0m

    [3mbar[0m[3m baz[0m
